fix: player control center and episodes button unclickable on mobile

--- a/packages/vidstack/styles/player/default/layouts/video.css
+++ b/packages/vidstack/styles/player/default/layouts/video.css
@@ -449,7 +449,7 @@
  */
 
 :where(.vds-video-layout[data-sm] .vds-controls-group:nth-last-child(2)) {
-  pointer-events: none;
+  pointer-events: auto;
 }
 
 :where(.vds-video-layout[data-sm] .vds-controls-group:last-child) {
